@@ -319,8 +319,8 @@ package or when debugging this package.\
 %_missing_doc_files_terminate_build	1
 
 #
-# Use internal dependency generator rather than external helpers.
-%_use_internal_dependency_generator	0
+# Use internal dependency generator rather than external helpers?
+%_use_internal_dependency_generator	1
 
 #
 # Path to scripts to autogenerate package dependencies,
@@ -445,7 +445,8 @@ package or when debugging this package.\
 #				mp_mmapsize=8Mb mp_size=512Kb
 
 # Use a CDB database model for concurrent access.
-%__dbi_cdb			create cdb mpool mp_mmapsize=16Mb mp_size=1Mb
+# XXX "private" cdb locks for legacy interoperation transiting to glibc+nptl
+%__dbi_cdb			create private cdb mpool mp_mmapsize=16Mb mp_size=1Mb
 
 %__dbi_other			%{?_tmppath:tmpdir=%{_tmppath}} %{?__dbi_cdb}
 
@@ -490,7 +491,9 @@ package or when debugging this package.\
 %_dbi_tags	Packages:Name:Basenames:Group:Requirename:Providename:Conflictname:Triggername:Dirnames:Requireversion:Provideversion:Installtid:Sigmd5:Sha1header:Filemd5s:Depends:Pubkeys
 
 # "Packages" should have shared/exclusive fcntl(2) lock using "lockdbfd".
-%_dbi_config_Packages		%{_dbi_htconfig} lockdbfd
+# XXX disable legacy fcntl lock until glibc+nptl fixes fcntl
+#%_dbi_config_Packages		%{_dbi_htconfig} lockdbfd
+%_dbi_config_Packages		%{_dbi_htconfig}
 
 # "Depends" is a per-transaction cache of known dependency resolutions.
 %_dbi_config_Depends		%{_dbi_htconfig} temporary private
